collapse sections on bar click fixes #5

--- a/src/app/components/material-production/material-production.component.scss
+++ b/src/app/components/material-production/material-production.component.scss
@@ -5,6 +5,7 @@
 }
 
 .hover-button{
+    cursor: pointer;
     button {
         visibility: hidden;
     }
